# QuEST

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.sh
cpp/: module.cpp
docs/: literature.md
python/: pyproject.toml  test.py
src/: QuEST.py  core.cpp
src/quest/: __init__.py  _api.py  _quest_core.pyi
tests/: test_basic.py
